--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-resume-template",
+  "name": "my-react-profile",
   "version": "2.0.0",
   "private": true,
   "scripts": {
@@ -19,6 +19,7 @@
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-favicon": "^2.0.3",
     "ts-pattern": "^5.0.4"
   },
   "devDependencies": {
