--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-module-resolver": "^1.5.0",
     "eslint-plugin-monorepo": "^0.3.2",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-memo": "^0.0.3",
@@ -49,7 +50,7 @@
     "file-loader": "^6.2.0",
     "postcss": "^8.4.27",
     "postcss-preset-env": "^9.1.0",
-    "prettier": "^3.0.0",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "sass": "^1.64.2",
     "sort-package-json": "^2.5.1",
